@@ -26,17 +26,18 @@ AUX texmf-update 2395 RMD160 31f34da75eca76ab021e8ee30cf4539351127be7 SHA1 11b60
 MD5 eb6513411e31edbeb90595ff2302456a files/texmf-update 2395
 RMD160 31f34da75eca76ab021e8ee30cf4539351127be7 files/texmf-update 2395
 SHA256 e043510c72044f82f28f57f409db9a31c5c087429a5304c4ad535afeab2f4273 files/texmf-update 2395
-DIST texlive-basicbin-2007.tar.bz2 9135702 RMD160 ac644c6484bb68e8de2f2830d37d076d8d8048ed SHA1 39a96e48fe93601d5c464d63103caf137680e46b SHA256 5dc3f56e238eff816ab9385c2a36c8e6a0e5e59208a76d21302990dbec8d7e59
-DIST texlive-binextra-2007.tar.bz2 548703 RMD160 0a3df33718596d2469875a3e1a461bcf3a27e5fa SHA1 e3a62468ef3f2e9e4663a319e771c2e41dd41e89 SHA256 dd65c219dcb64f62aad62cff3bcb8911e4cf955874cef02f2866d7e88653a577
+DIST texlive-basicbin-2007.tar.bz2 9135882 RMD160 1ba9588e33fa19ab87371943e1ca5f06c28a56d9 SHA1 d822cca0a90875c24ff9cfa6c4ad925feda19eb7 SHA256 09a91dd71cd0ae7de273f870e9c3e1c59558ebfceb9a070e9a11b3c7486bac51
+DIST texlive-binextra-2007.tar.bz2 548653 RMD160 719967c6249a1d12aa3e17d581547a5d9839f642 SHA1 dc7d31391ccd31c33c30a2d85ddb80acede18a16 SHA256 d90ad4ee76180cfc5547f84a926e218ce6eab29add4f7b5310b9fd8827bd6c44
 DIST texlive-core-2007.tar.bz2 31078286 RMD160 496cb3fa3c5cd9b2ea5da3b0bced67a2b5afe7b9 SHA1 37286f7b962c18ec5234071a8d2dde1499d9ab71 SHA256 96c12147ea9717539553eb6b3be52c2df6163ca617dccc71282ccd39c2e5773b
-EBUILD texlive-core-2007.ebuild 5845 RMD160 9b1e4ebceed3ca8359e9820771a00ecb23d079cd SHA1 08962718802352cf9a04ac2122084229226e002a SHA256 dad02a882998fbe7fa3d13bfa9bd4305544f7ad1173aec22dde5a763ec918847
-MD5 4759ad29615a8a4cfc8dc60192bb1513 texlive-core-2007.ebuild 5845
-RMD160 9b1e4ebceed3ca8359e9820771a00ecb23d079cd texlive-core-2007.ebuild 5845
-SHA256 dad02a882998fbe7fa3d13bfa9bd4305544f7ad1173aec22dde5a763ec918847 texlive-core-2007.ebuild 5845
-MISC ChangeLog 3474 RMD160 a5a9cd35b224df67516498ac154301519bcb0b8c SHA1 67f6c7d9a56b8ab4a1ed763987a8992c598bfe73 SHA256 62495f7567487990e402eab4aa68d617d900233bf8d2e3b9c7756f6dd3d393a9
-MD5 f602a21328d10997c87bc0f948df63f3 ChangeLog 3474
-RMD160 a5a9cd35b224df67516498ac154301519bcb0b8c ChangeLog 3474
-SHA256 62495f7567487990e402eab4aa68d617d900233bf8d2e3b9c7756f6dd3d393a9 ChangeLog 3474
-MD5 f7ae1c6c8062705eee572c5f7900a81f files/digest-texlive-core-2007 801
-RMD160 717d8f5d75561353109630ab6f4c761acc07105f files/digest-texlive-core-2007 801
-SHA256 c6df760067c083320820415181e44760578b0d3509ecf7ea3be215431c4baff5 files/digest-texlive-core-2007 801
+DIST texlive-fontbin-2007.tar.bz2 2300119 RMD160 6bab22424b58c9751c4fdad0bdecb985b18379cb SHA1 c905e192491a24b7864ffa17dc0f9c74429555c7 SHA256 8d42376c9e11d12a0280c464672d633c1ca0be6bd01ac98e28c71aaab18d0da1
+EBUILD texlive-core-2007.ebuild 5638 RMD160 1c4a59d81c61df8fa494e40d133b5933015da388 SHA1 4227b76174f21ceb5d1ea10322f81184698008cb SHA256 d42084fe1ff8437fd141e6d2cd1e40ef6f09e4f3e651b6d74a6f8614ac081f3e
+MD5 d017515140517224f5087ad8c20e6de5 texlive-core-2007.ebuild 5638
+RMD160 1c4a59d81c61df8fa494e40d133b5933015da388 texlive-core-2007.ebuild 5638
+SHA256 d42084fe1ff8437fd141e6d2cd1e40ef6f09e4f3e651b6d74a6f8614ac081f3e texlive-core-2007.ebuild 5638
+MISC ChangeLog 3681 RMD160 a6609748b629e849486a370e06e2460743b208f1 SHA1 9e45acfb56ff93db3a899957a3cf99cfd539f6f1 SHA256 09386584f128caae8a955506214c7ba043c08b5c469efa166caee319c5f6d595
+MD5 d7a07185d388cf94318d7b6b08280788 ChangeLog 3681
+RMD160 a6609748b629e849486a370e06e2460743b208f1 ChangeLog 3681
+SHA256 09386584f128caae8a955506214c7ba043c08b5c469efa166caee319c5f6d595 ChangeLog 3681
+MD5 f1925aa6bf2fbc1d70e86be14a589283 files/digest-texlive-core-2007 1069
+RMD160 b9c4b0fac91248104c1c9f04e7e0a4b83a199551 files/digest-texlive-core-2007 1069
+SHA256 2f5ac7d299c66c05082e6a56afd9dfa2a4a76c98bf8cda6ce0d493e2611c540e files/digest-texlive-core-2007 1069
