@@ -1,9 +1,12 @@
-MD5 48c24362cf80c3ad6fc135a1eb866490 texlive-basicbin-2007.tar.bz2 9135702
-RMD160 ac644c6484bb68e8de2f2830d37d076d8d8048ed texlive-basicbin-2007.tar.bz2 9135702
-SHA256 5dc3f56e238eff816ab9385c2a36c8e6a0e5e59208a76d21302990dbec8d7e59 texlive-basicbin-2007.tar.bz2 9135702
-MD5 dcf545428b89ec73cecc5df197d2fe77 texlive-binextra-2007.tar.bz2 548703
-RMD160 0a3df33718596d2469875a3e1a461bcf3a27e5fa texlive-binextra-2007.tar.bz2 548703
-SHA256 dd65c219dcb64f62aad62cff3bcb8911e4cf955874cef02f2866d7e88653a577 texlive-binextra-2007.tar.bz2 548703
+MD5 ee912090df501a17dcf421f1f45fdef0 texlive-basicbin-2007.tar.bz2 9135882
+RMD160 1ba9588e33fa19ab87371943e1ca5f06c28a56d9 texlive-basicbin-2007.tar.bz2 9135882
+SHA256 09a91dd71cd0ae7de273f870e9c3e1c59558ebfceb9a070e9a11b3c7486bac51 texlive-basicbin-2007.tar.bz2 9135882
+MD5 47f87a054c52b5dbe5566377f0e9fbec texlive-binextra-2007.tar.bz2 548653
+RMD160 719967c6249a1d12aa3e17d581547a5d9839f642 texlive-binextra-2007.tar.bz2 548653
+SHA256 d90ad4ee76180cfc5547f84a926e218ce6eab29add4f7b5310b9fd8827bd6c44 texlive-binextra-2007.tar.bz2 548653
 MD5 d539b5a6b9f96cc2616f09f4543394c8 texlive-core-2007.tar.bz2 31078286
 RMD160 496cb3fa3c5cd9b2ea5da3b0bced67a2b5afe7b9 texlive-core-2007.tar.bz2 31078286
 SHA256 96c12147ea9717539553eb6b3be52c2df6163ca617dccc71282ccd39c2e5773b texlive-core-2007.tar.bz2 31078286
+MD5 ec45f5b4ca56491405143ab71f19dcc1 texlive-fontbin-2007.tar.bz2 2300119
+RMD160 6bab22424b58c9751c4fdad0bdecb985b18379cb texlive-fontbin-2007.tar.bz2 2300119
+SHA256 8d42376c9e11d12a0280c464672d633c1ca0be6bd01ac98e28c71aaab18d0da1 texlive-fontbin-2007.tar.bz2 2300119
